Fix overflow scrolling issues

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -300,7 +300,7 @@ label {
                 content: "";
                 position: absolute;
                 top: -10px;
-                right: -200%;
+                right: -20px;
                 bottom: -10px;
                 left: 0;
                 // background-color: orange;
@@ -315,9 +315,16 @@ label {
         }
     }
 
-    .compare-small {
+    .compare-small-container {
         display: flex;
         overflow-x: scroll;
+        -webkit-overflow-scrolling: touch;
+        margin: 0 -10px;
+        padding: 0 10px;
+    }
+
+    .compare-small {
+        display: flex;
     
         .micro-card {
             display: inline-block;
@@ -325,16 +332,26 @@ label {
             border-radius: 5px 5px 0 0;
             margin-right: 5px;
             background-color: #F2F4F6;
+
+            &:last-of-type {
+                margin-right: 10px;
+            }
         }
     }
 
     .compare-menu-container {
         height: 100vh;
         overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+        padding-bottom: 30px;
 
         nav {
             margin: 10px 0;
         }
+    }
+
+    .card:last-of-type {
+        margin-bottom: 100px;
     }
 
     &.shown {
